--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 &nbsp;&nbsp;
 
 <div class="name">
-  <img src="">
+  <img id="stamp_type6" src="picture\stamp_type6.gif">
     <div class="nes-container w-full is-dark is-rounded text-center"
         style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
       <span id="typed-sample6"></span>
@@ -72,14 +72,6 @@
     </div>
 </div>
 
-&nbsp;&nbsp;
-
-
-    <div class="nes-container w-full is-dark is-rounded text-center"
-        style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
-      <span id="typed-sample7"></span>
-  
-    </div>
 
 
 &nbsp;&nbsp;
@@ -102,14 +94,14 @@
 
 
 &nbsp;&nbsp;
-
-
+<div class="name">
+  <img id="member_in" src="picture\endtype.png">
     <div class="nes-container w-full is-dark is-rounded text-center"
         style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
       <span id="typed-sample11"></span>
   
     </div>
-
+</div>
 
 
 
