--- a/index.html
+++ b/index.html
@@ -19,90 +19,110 @@
 </head>
 <body>
 &nbsp;
-
-<div class="name">
-    <img class="img_loop" src="picture\35_20230826014247.png">
+<div id="q_01"onclick="type2in()">
+<a  id="btnb" class="btn" href="#q_02">
+<div class="name" >
+    <img id="type1-in" src="picture\35_20230826014247.png">
         <div class="nes-container w-full is-dark is-rounded text-center" 
             style="border-image-repeat: stretch; width: 100% !important; text-align: center;"> 
             <span id="typed-sample"></span>
         </div>
 </div>
-
+</a>
+</div>
     &nbsp;&nbsp;
 
+<div id="q_02" style="display: none;" onclick="type3in()">
+<a  id="btnb" class="btn" href="#q_03">
 <div class="name">
-    <img class="img_loop" src="picture\47fe5aa2baddb8b2.gif">
+    <img id="type2-in" src="picture\47fe5aa2baddb8b2.gif">
     <div class="nes-container w-full is-dark is-rounded text-center" 
         style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
       <span id="typed-sample2"></span>
-  
     </div>
+</div>
+</a>
 </div>
 
 &nbsp;&nbsp;
-
+<div id="q_03" style="display: none;"onclick="type4in()">
+<a  id="btnb" class="btn" href="#q_04">
 <div class="name">
-    <img src="picture\typed3.gif">
+    <img id="type3-in" src="picture\typed3.gif">
     <div class="nes-container w-full is-dark is-rounded text-center" 
         style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
       <span id="typed-sample3"></span>
     </div>
 </div>
+</a>
 
+</div>
 &nbsp;&nbsp;
 
-
+<div id="q_04" style="display: none;" onclick="type5in()">
+  <a  id="btnb" class="btn" href="#q_05">
 <div class="name">
-  <img id="mosaic-in" src="picture\type5.gif">
+  <img id="type5-in" src="picture\type5.gif">
+    <div class="nes-container w-full is-dark is-rounded text-center"
+        style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
+      <span id="typed-sample4"></span>
+  
+    </div>
+  </div>
+</a>
+</div>
+&nbsp;&nbsp;
+
+<div id="q_05" style="display: none;" onclick="type6in()">
+  <a  id="btnb" class="btn" href="#q_06">
+<div class="name">
+  <img id="type6-in" src="picture\stamp_type6.gif">
     <div class="nes-container w-full is-dark is-rounded text-center"
         style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
       <span id="typed-sample5"></span>
   
     </div>
-  </div>
+</div>
+</a>
+</div>
+
 
 &nbsp;&nbsp;
 
+
+
+
+&nbsp;&nbsp;
+
+<div id="q_06" style="display: none;" onclick="type7in()">
+  <a  id="btnb" class="btn" href="#q_07">
 <div class="name">
-  <img id="stamp_type6" src="picture\stamp_type6.gif">
+<img id="type7-in" src="picture\member.png">
     <div class="nes-container w-full is-dark is-rounded text-center"
         style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
       <span id="typed-sample6"></span>
   
     </div>
 </div>
-
-
-
+</a>
+</div>
 &nbsp;&nbsp;
 
 
 
-
 &nbsp;&nbsp;
+<div id="q_07" style="display: none;" onclick="type8in()"> 
+  <a  id="btnb" class="btn end" href="#q_07">
 <div class="name">
-<img id="member_in" src="picture\member.png">
+  <img id="type8-in" src="picture\endtype.png">
     <div class="nes-container w-full is-dark is-rounded text-center"
         style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
-      <span id="typed-sample9"></span>
+      <span id="typed-sample7"></span>
   
     </div>
 </div>
-
-&nbsp;&nbsp;
-
-
-
-&nbsp;&nbsp;
-<div class="name">
-  <img id="member_in" src="picture\endtype.png">
-    <div class="nes-container w-full is-dark is-rounded text-center"
-        style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
-      <span id="typed-sample11"></span>
-  
-    </div>
+</a>
 </div>
-
 
 
 
