--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
 </head>
 <body>
 
-<header class="header">
-  <p class="head_name">TOBE<img class="svgfile" src="game_controller_gray.svg" alt="" >CONTINUE</p>
-</header>
 
-
-<p class="ggg">&nbsp;</p>
+<p class="gg">&nbsp;</p><p class="gg">&nbsp;</p>
+<p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p>
 <div id="q_01"onclick="type2in()">
+  <p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p>
 <a  id="btnb" class="typebtn" href="#q_02">
 <div class="name" >
 
@@ -45,6 +43,7 @@
 </div>
 
 <div id="q_02" style="display: none;" onclick="type3in()">
+  <p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p>
 <a  id="btnb" class="typebtn" href="#q_03">
 <div class="name">
     <img id="type2-in" src="picture\47fe5aa2baddb8b2.gif">
@@ -58,6 +57,7 @@
 
 
 <div id="q_03" style="display: none;"onclick="type4in()">
+  <p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p>
 <a  id="btnb" class="typebtn" href="#q_04">
 <div class="name">
     <img id="type3-in" src="picture\typed3.gif">
@@ -72,6 +72,7 @@
 
 
 <div id="q_04" style="display: none;" onclick="type5in()">
+  <p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p>
   <a  id="btnb" class="typebtn" href="#q_05">
 <div class="name">
   <img id="type4-in" src="picture\type5.gif">
