--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <!--   jQuery・bootstrapライブラリ読み込み -->
   <script class="img_loop" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <!--  /jQuery・bootstrapライブラリ読み込み -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!--  公式からダウンロードしてね -->
   <link href="https://appsol-one.com/custom/00-page/top/nes.min.css" rel="stylesheet" />
   <script class="img_loop" src="https://appsol-one.com/custom/00-page/top/typed.js"></script>
-  <!--  /公式からダウンロードしてね -->
+
 <!--モザイク-->
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="mosaic-in.js"></script>
+
+<script type="text/javascript" class="img_loop" src="script11.js"></script>
 
   <link rel="stylesheet" type="text/css" href="index.css">
 
@@ -23,27 +25,29 @@
 
 
 </head>
-<body>
+<h1 class="pcpc">＊このページはあなたのデバイスに表示させるために更新中ですお待ちください</h1>
+
+<body id="typebody-in">
 
 
-<p class="gg">&nbsp;</p><p class="gg">&nbsp;</p>
-<p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p>
+<main class="main22">
 <div id="q_01"onclick="type2in()">
-  <p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p>
+
 <a  id="btnb" class="typebtn" href="#q_02">
 <div class="name" >
 
-    <img id="type1-in" src="picture\35_20230826014247.png">
+    <img class="" id="type1-in" src="picture\35_20230826014247.png">
         <div class="nes-container w-full is-dark is-rounded text-center" 
             style="border-image-repeat: stretch; width: 100% !important; text-align: center;"> 
             <span id="typed-sample"></span>
         </div>
 </div>
 </a>
+
 </div>
 
 <div id="q_02" style="display: none;" onclick="type3in()">
-  <p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p>
+
 <a  id="btnb" class="typebtn" href="#q_03">
 <div class="name">
     <img id="type2-in" src="picture\47fe5aa2baddb8b2.gif">
@@ -57,7 +61,7 @@
 
 
 <div id="q_03" style="display: none;"onclick="type4in()">
-  <p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p>
+
 <a  id="btnb" class="typebtn" href="#q_04">
 <div class="name">
     <img id="type3-in" src="picture\typed3.gif">
@@ -72,7 +76,7 @@
 
 
 <div id="q_04" style="display: none;" onclick="type5in()">
-  <p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p><p class="ggg">&nbsp;</p>
+
   <a  id="btnb" class="typebtn" href="#q_05">
 <div class="name">
   <img id="type4-in" src="picture\type5.gif">
@@ -91,11 +95,11 @@
   <a  id="btnb" class="typebtn" href="#q_06">
 <div class="name">
   <img id="type5-in" src="picture\stamp_type6.gif">
-    <div class="nes-container w-full is-dark is-rounded text-center"
+    <div class="nes-container w-full is-dark is-rounded text-center q_5"
         style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
       <span id="typed-sample5"></span>
-      <p class="ggg">&nbsp;</p>
     </div>
+    <p>&nbsp;</p>
 </div>
 </a>
 </div>
@@ -107,7 +111,7 @@
   <a  id="btnb" class="typebtn" href="#q_07">
 <div class="name">
 <img id="type6-in" src="picture\member.png">
-    <div class="nes-container w-full is-dark is-rounded text-center"
+    <div class="nes-container w-full is-dark is-rounded text-center q_6"
         style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
       <span id="typed-sample6"></span>
   
@@ -117,29 +121,100 @@
 </div>
 
 
-<div id="q_07" style="display: none;" onclick="type8in()"> 
-  <a  id="btnb" class="typebtn typeend" href="#q_07">
+<div id="q_07" style="display: none;"> 
+  <a  id="btnb" class="typebtn" href="#q_08">
 <div class="name">
   <img id="type7-in" src="picture\endtype.png">
     <div class="nes-container w-full is-dark is-rounded text-center"
         style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
       <span id="typed-sample7"></span>
-  
     </div>
 </div>
 </a>
 </div>
 
 
+<div id="q_08" class="q-8" style="display: none;" > 
+<div class="name">
+  <p class="p_start_yesno">冒険を始めますか？</p>
+
+<div class="startyesno" style="background-color:#000000; padding: 1rem 0;">
+  <form name="decision_yes">
+  <label>
+    <input type="radio" class="nes-radio is-dark" name="answerdark" value="yes" checked />
+    <span>Yes</span>
+</label>
+
+<label>
+    <input type="radio" class="nes-radio is-dark" name="answerdark" value="no"  />
+    <span>No</span>
+</label>
+
+</form>
+</div >
+
+<div class="decision_yes_no">
+  <button type="button" class="nes-btn "onclick="butotnClick()" style="border-image-repeat: stretch;text-align: center;">決定</button>
+</div>
+</div>
+</div>
+
+</main>
 
 
+
+<div id="yesno1" >
+<div class="nes-container w-full is-dark is-rounded text-center q_6"
+style="border-image-repeat: stretch; width: 100% !important; text-align: center;">
+<span id="error_message"></span>
+
+</div>
+<div class="decision_yes_no">
+<button type="button" class="nes-btn" onclick="cancel_btn()" href="#q_08">キャンセル</button>
+</div>
+</div>
+
+<script>
+  document.getElementById("yesno1").style.display ="none";
+  function butotnClick(){
+    const p1 = document.getElementById("yesno1")
+    const p2 = document.getElementById('q_08')
+    const form = document.decision_yes.answerdark.value;
+        console.log(form)
+    if (form === "yes"){
+        window.location.href = "https://rakkochchch.github.io/2023schoolfestival.ury/stamp#q_01"}
+    else{
+        p1.style.display = 'block';
+        p2.style.display = 'none';
+
+        typede("#error_message","縺ゅ↑縺溘↓∫縺ｯ 蜀%3 帝匱縺ｫ蜃ｺ逋ｺ⁈‡§54*¶あ縺吶∫43@ ｋ??ｼ縺後≠繧翫∪縺帙ｓ???")
+        applyMosaicInAnimation('#type7-in', 1200, 5);
+
+  
+      
+
+      }
+  }
+
+
+  function cancel_btn() {
+
+    const p1 = document.getElementById("yesno1")
+    const p2 = document.getElementById('q_08')
+    p2.style.display = 'block';
+    p1.style.display = 'none';
+
+
+  }
+
+</script>
 
 <footer>
   <img class="followme" src="sns\23_20230816152013.png">
         <ul class="sns_box">
-          <li><a class="" onclick="clickDisplayAlert()"><img class="sns" src="sns\sns_twitter.png"></a></li>
-          <li><a class=""><img class="sns" src="sns\sns_instagram.png"></a></li>
-          <li><a class="" href="https://shs.kyoto-art.ac.jp/"><img class="sns" src="sns\25_20230820112222.png"></a></li>
+          <li><a class="aa" onclick="clickDisplayAlert()"><img class="sns" src="sns\sns_twitter.png"></a></li>
+          <li><a class="aa"><img class="sns" src="sns\sns_instagram.png"></a></li>
+          <li><a class="aa" href="https://shs.kyoto-art.ac.jp/"><img class="sns" src="sns\25_20230820112222.png"></a></li>
         </ul>
 <p class="copytxt">&copy; 2023 文化祭実行委員会</p>
 </footer>
@@ -150,6 +225,8 @@
 	  
 <!-- ############ javascript  ############ -->
 <script type="text/javascript" class="img_loop" src="script.js"></script>
+
 <!-- ############ /javascript  ############ -->
 </body>
+
 </html>
