--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body id="typebody-in">
 
 
-<main class="main22">
+<main id="main22">
 <div id="q_01"onclick="type2in()">
 
 <a  id="btnb" class="typebtn" href="#q_02">
@@ -208,6 +208,24 @@ style="border-image-repeat: stretch; width: 100% !important; text-align: center;
   }
 
 </script>
+<main class="bg" id="twitterclass" style="display: none;">
+  <ul class="menu_box_sns">
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://twitter.com/2023_ury?s=21&t=V8xjsc7X6tMPVmflEPUZYA" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;文化祭実行委員&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;MICS映像表現部&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;学校創造同好会&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;コスプレ同好会&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;&nbsp;&nbsp;演劇同好会&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;&nbsp;&nbsp;音楽同好会&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">&nbsp;ゲーム同好会Neo&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">京都文化研究同好会</a></li>
+
+
+  </ul>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+</main>
 
 <footer>
   <img class="followme" src="sns\23_20230816152013.png">
