--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ style="border-image-repeat: stretch; width: 100% !important; text-align: center;
         p2.style.display = 'none';
 
         typede("#error_message","縺ゅ↑縺溘↓∫縺ｯ 蜀%3 帝匱縺ｫ蜃ｺ逋ｺ⁈‡§54*¶あ縺吶∫43@ ｋ??ｼ縺後≠繧翫∪縺帙ｓ???")
-        applyMosaicInAnimation('#error_message', 120, 5);
+        applyMosaicInAnimation('#type7-in', 1200, 5);
 
   
       
@@ -210,14 +210,41 @@ style="border-image-repeat: stretch; width: 100% !important; text-align: center;
 </script>
 <main class="bg" id="twitterclass" style="display: none;">
   <ul class="menu_box_sns">
-    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://twitter.com/2023_ury?s=21&t=V8xjsc7X6tMPVmflEPUZYA" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;文化祭実行委員&nbsp;&nbsp;</a></li>
-    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;MICS映像表現部&nbsp;&nbsp;</a></li>
-    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;学校創造同好会&nbsp;&nbsp;</a></li>
-    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;コスプレ同好会&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://twitter.com/2023_ury" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;文化祭実行委員&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://twitter.com/MICS_0719" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;MICS映像表現部&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://twitter.com/KZH_souzoubu" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;学校創造同好会&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://twitter.com/kua_shs_cos" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;コスプレ同好会&nbsp;&nbsp;</a></li>
     <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;&nbsp;&nbsp;演劇同好会&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;&nbsp;&nbsp;音楽同好会&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">&nbsp;ゲーム同好会Neo&nbsp;&nbsp;</a></li>
-    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="#q_06" ><img class="sns" src="sns\sns_twitter.png">京都文化研究同好会</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://twitter.com/ongakudoukoukai" ><img class="sns" src="sns\sns_twitter.png">&nbsp;&nbsp;&nbsp;&nbsp;音楽同好会&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://twitter.com/e_sportNeo" ><img class="sns" src="sns\sns_twitter.png">&nbsp;ゲーム同好会Neo&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://twitter.com/kua_shs_kyoto" ><img class="sns" src="sns\sns_twitter.png">京都文化研究同好会</a></li>
+
+
+  </ul>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+</main>
+
+<main class="bg" id="instagramclass" style="display: none;">
+  <ul class="menu_box_sns">
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/2023_ury/" ><img class="sns" src="sns\sns_instagram.png">&nbsp;&nbsp;文化祭実行委員&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/mics.eizou0719/" ><img class="sns" src="sns\sns_instagram.png">&nbsp;&nbsp;MICS映像表現部&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/schoolcreation_kzh/" ><img class="sns" src="sns\sns_instagram.png">&nbsp;&nbsp;学校創造同好会&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/cosplaydoukoukai/" ><img class="sns" src="sns\sns_instagram.png">&nbsp;&nbsp;コスプレ同好会&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/cafe.dokokai_kzh/" ><img class="sns" src="sns\sns_instagram.png">&nbsp;&nbsp;&nbsp;カフェ同好会&nbsp;&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/kua_engeki/" ><img class="sns" src="sns\sns_instagram.png">&nbsp;&nbsp;&nbsp;&nbsp;演劇同好会&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/ongaku_kua_shs/" ><img class="sns" src="sns\sns_instagram.png">&nbsp;&nbsp;&nbsp;&nbsp;音楽同好会&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/usc20.22/" ><img class="sns" src="sns\sns_instagram.png">&nbsp;&nbsp;スポーツクラブ&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/neo.game_o2.o/" ><img class="sns" src="sns\sns_instagram.png">&nbsp;ゲーム同好会Neo&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/johnnys.doukoukai/" ><img class="sns" src="sns\sns_instagram.png">&nbsp;ジャニーズ同好会&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/kuashs_art.official/" ><img class="sns" src="sns\sns_instagram.png">&nbsp;&nbsp;美術創作同好会&nbsp;&nbsp;</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/_lovei_official_/" ><img class="sns" src="sns\sns_instagram.png">&nbsp;Olive DANCE同好会</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/s_okarut_2/" ><img class="sns" src="sns\sns_instagram.png">オカルト研究同好会</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/kua_shs_kyoto/" ><img class="sns" src="sns\sns_instagram.png">京都文化研究同好会</a></li>
+    <li class="sns_twitterclass_li22"><a  class="sns_twitterclass_li" href="https://www.instagram.com/sibt73_kenkyu/" ><img class="sns" src="sns\sns_instagram.png">生物化学研究同好会</a></li>
+
 
 
   </ul>
@@ -231,7 +258,7 @@ style="border-image-repeat: stretch; width: 100% !important; text-align: center;
   <img class="followme" src="sns\23_20230816152013.png">
         <ul class="sns_box">
           <li><a class="aa" onclick="clickDisplayAlert()"><img class="sns" src="sns\sns_twitter.png"></a></li>
-          <li><a class="aa"><img class="sns" src="sns\sns_instagram.png"></a></li>
+          <li><a class="aa" onclick="clickDisplayAlertsns()"><img class="sns" src="sns\sns_instagram.png"></a></li>
           <li><a class="aa" href="https://shs.kyoto-art.ac.jp/"><img class="sns" src="sns\25_20230820112222.png"></a></li>
         </ul>
 <p class="copytxt">&copy; 2023 文化祭実行委員会</p>
