--- a/gdsfasdf.html
+++ b/gdsfasdf.html
@@ -2,9 +2,7 @@
 
 
 <div class="form-wrapper">
-    <form
-      action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfxahQSb10nKkpO7WG4eQwmTA-NitXVnbKca26YvQlcWIWUDw/formResponse"
-      id="form">
+    <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfxahQSb10nKkpO7WG4eQwmTA-NitXVnbKca26YvQlcWIWUDw/formResponse" id="form">
       <div class="box">
         <label for="name">お名前</label>
         <input type="text" name="entry.1808411649" id="name" placeholder="お名前" required>
@@ -35,7 +33,7 @@
     <p class="false-message">送信失敗です</p>
   </div>
   <style>
-    .end-message {
+.end-message {
   display: none;
 }
 
@@ -46,7 +44,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
+document.addEventListener('DOMContentLoaded', function() {
 
 const form = document.getElementById('form');
 if (form) {
@@ -56,7 +54,7 @@ if (form) {
         const formData = new FormData(form);
         const xhr = new XMLHttpRequest();
 
-        xhr.open('POST', 'https://docs.google.com/forms/u/0/d/e/hogehoge/formResponse', true);
+        xhr.open('POST', 'https://docs.google.com/forms/u/0/d/e/1FAIpQLSfxahQSb10nKkpO7WG4eQwmTA-NitXVnbKca26YvQlcWIWUDw/formResponse', true);
 
         xhr.onreadystatechange = function() {
             if (xhr.readyState === 4) { // 4はリクエスト完了を意味します
